--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                 <div class="user-icon"><img id="icon1" src="./gekko.jpg"></i></div>
                 <div class="greet">
                     <p>Hi there,</p>
-                    <p id="user-name"><a href="#">Morgan Oakley</a></p>
+                    <p id="user-name"><a href="">Morgan Oakley</a></p>
                 </div>
             </div>
             <div id="header-bottom-right">
-                <div class="n-u-s"><a href="#">New</a></div>
-                <div class="n-u-s"><a href="#">Upload</a></div>
-                <div class="n-u-s"><a href="#">Share</a></div>
+                <div class="n-u-s"><a href="">New</a></div>
+                <div class="n-u-s"><a href="">Upload</a></div>
+                <div class="n-u-s"><a href="">Share</a></div>
 
             </div>
         </div>
