--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <button id="search-btn" type="submit" value="search"><i class="fa fa-search" aria-hidden="true"></i>
                     </button>
 
-                    <input class="boxx" type="search" id="google-search" name="q" placeholder="real search"/>
+                    <input class="boxx" type="search" id="google-search" name="q" />
                 </form>
             </div>
             <div id="top-right">
